--- a/BanquetCoupons/BanquetCoupons.csproj
+++ b/BanquetCoupons/BanquetCoupons.csproj
@@ -214,6 +214,9 @@
     <None Include="fonts\AsiaHotelBeta-Regular.otf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="fonts\FREE3OF9.TTF">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="fonts\NotoSansThai-Regular.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
