--- a/BanquetCoupons/App.config
+++ b/BanquetCoupons/App.config
@@ -21,6 +21,10 @@
         <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.2" newVersion="8.0.0.2" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-29.2462.5.0" newVersion="29.2462.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
