--- a/BanquetCoupons/BanquetCoupons.csproj
+++ b/BanquetCoupons/BanquetCoupons.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.1.8.9\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -57,6 +60,9 @@
     <Reference Include="Microsoft.Extensions.Primitives, Version=8.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Extensions.Primitives.8.0.0\lib\net462\Microsoft.Extensions.Primitives.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.IO.RecyclableMemoryStream, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IO.RecyclableMemoryStream.3.0.1\lib\netstandard2.0\Microsoft.IO.RecyclableMemoryStream.dll</HintPath>
+    </Reference>
     <Reference Include="PdfSharp, Version=6.2.0.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
       <HintPath>..\packages\PDFsharp.6.2.0\lib\netstandard2.0\PdfSharp.dll</HintPath>
     </Reference>
@@ -74,9 +80,6 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Syncfusion.Core.WinForms, Version=29.2462.5.0, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <HintPath>..\packages\Syncfusion.Core.WinForms.29.2.5\lib\net462\Syncfusion.Core.WinForms.dll</HintPath>
-    </Reference>
     <Reference Include="Syncfusion.Core.XForms, Version=29.2.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Syncfusion.Xamarin.Core.29.2.5\lib\netstandard2.0\Syncfusion.Core.XForms.dll</HintPath>
     </Reference>
@@ -93,7 +96,11 @@
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.8.0.1\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
@@ -113,12 +120,16 @@
     <Reference Include="System.Security.Cryptography.Pkcs, Version=8.0.0.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Cryptography.Pkcs.8.0.1\lib\net462\System.Security.Cryptography.Pkcs.dll</HintPath>
     </Reference>
+    <Reference Include="System.Security.Cryptography.Xml, Version=8.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Security.Cryptography.Xml.8.0.2\lib\net462\System.Security.Cryptography.Xml.dll</HintPath>
+    </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -153,6 +164,12 @@
     <Compile Include="BanquetDepartment.Designer.cs">
       <DependentUpon>BanquetDepartment.cs</DependentUpon>
     </Compile>
+    <Compile Include="BQReport.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BQReport.Designer.cs">
+      <DependentUpon>BQReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="CouponData.cs" />
     <Compile Include="Coupons.cs">
       <SubType>UserControl</SubType>
@@ -166,8 +183,21 @@
     <Compile Include="FinanceForm.Designer.cs">
       <DependentUpon>FinanceForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="financeHome.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="financeHome.Designer.cs">
+      <DependentUpon>financeHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="financeReport.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="financeReport.Designer.cs">
+      <DependentUpon>financeReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="FontInstaller.cs" />
     <Compile Include="FontManager.cs" />
+    <Compile Include="FontResolver.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +246,9 @@
     <EmbeddedResource Include="BQHome.resx">
       <DependentUpon>BQHome.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="BQReport.resx">
+      <DependentUpon>BQReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Coupons.resx">
       <DependentUpon>Coupons.cs</DependentUpon>
     </EmbeddedResource>
@@ -224,6 +257,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FinanceForm.resx">
       <DependentUpon>FinanceForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="financeHome.resx">
+      <DependentUpon>financeHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="financeReport.resx">
+      <DependentUpon>financeReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
