--- a/BanquetCoupons/BanquetCoupons.csproj
+++ b/BanquetCoupons/BanquetCoupons.csproj
@@ -361,6 +361,9 @@
   <ItemGroup>
     <None Include="Resources\2222.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\marque1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
