--- a/BanquetCoupons/BanquetCoupons.csproj
+++ b/BanquetCoupons/BanquetCoupons.csproj
@@ -304,7 +304,9 @@
     <None Include="fonts\FREE3OF9.TTF">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="fonts\NotoSansThai-Bold.ttf" />
+    <None Include="fonts\NotoSansThai-Bold.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="fonts\NotoSansThai-Regular.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
